fix(build): remove NSApplication subclass usage and make HotkeyServiceType a class-only protocol; fix build errors and clean startup flow\n\n- Move app lifecycle to AppDelegate\n- Set hotkey callback without mutating container\n- Start/stop hotkey in correct lifecycle hooks\n- Update .gitignore for macOS metadata and app bundle

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
+# Local dev logs
 .dev-log/
+
+# macOS metadata
 .DS_Store
+**/.DS_Store
+
+# Build outputs (keep tracked app intact; ignore local rebuilds)
+Context Collector.app/
